Fixed alignment of quicksearch links in welcome bar.

--- a/Air_rtl.css
+++ b/Air_rtl.css
@@ -301,6 +301,14 @@ html, body, .pun table, .pun div, .pun form, .pun p, .pun h1, .pun h2, .pun h3, 
 	padding: 0;
 }
 
+#brdwelcome .conl {
+  float: right;
+}
+
+#brdwelcome .conr {
+  float: left;
+}
+
 #brdwelcome li span {
 	background: url(Air_rtl/img/bull.png) center right no-repeat;
 	padding-right: 18px;
